--- a/flow-main/src/main/resources/templates/login.html
+++ b/flow-main/src/main/resources/templates/login.html
@@ -1,46 +1,78 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/html">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <head>
-        <meta name="viewport" content="width=device-width,initial-scale=1" charset="UTF-8"/>
-        <title>登录</title>
-        <!-- Bootstrap core CSS -->
-        <link th:href="@{/webjars/bootstrap/4.4.1/css/bootstrap.css}" rel="stylesheet">
-    </head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>用户登录</title>
+    <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.css}">
+
+    <style>
+        .bgColor {
+            background-color: rgba(243, 66, 111, 0.15)
+        }
+
+        .divBorder {
+            border: solid 1px rgba(12, 24, 255, 0.15);
+            padding: 10px;
+            margin-top: 10px;
+            border-radius: 10px;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .h4font {
+            margin-top: 0px;
+            font-family: 微软雅黑;
+            font-weight: 500;
+        }
+        .center {
+            padding: 25% 0;
+        }
+        .verifyInput {
+            vertical-align: middle;
+            font-size: 14px;
+            font-weight: normal;
+            line-height: 1;
+            /*border:1px solid #999;*/
+            float: left;
+            width: 200px;
+            height: 30px;
+
+        }
+        .verifyImage {
+            vertical-align: middle;
+        }
+    </style>
 </head>
 <body>
-<br/>
-<div>
-    <form class="form-horizontal" id="empForm">
-        <div class="form-group">
-            <label for="empName" class="col-sm-2 control-label">用户名：</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="empName" name="empName" placeholder="请输入用户名">
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="password" class="col-sm-2 control-label">密码</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" id="password" name="password" placeholder="请输入密码">
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox"> 记住我
-                    </label>
+
+<div class="container">
+    <div class="row">
+        <div class="divBorder col-sm-offset-4 col-sm-4">
+            <h3 class="panel panel-heading h4font">
+                用户登录
+            </h3>
+            <form id="empForm" class="form-horizontal">
+                <div class="input-group ">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user" aria-hidden="true"></i></span>
+                    <input type="text" class="form-control" id="userName" name="userName" placeholder="请输入用户名称"/>
                 </div>
-            </div>
+                <br>
+                <div class="input-group ">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="请输入密码"/>
+                </div>
+                <br/>
+                <input type="button" id="btn" class="btn btn-lg btn-block btn-info" value="登 录">
+            </form>
         </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="button" id="btn" class="btn btn-primary">登录</button>
-            </div>
-        </div>
-    </form>
+    </div>
+
 </div>
-<script src="/webjars/jquery/3.4.1/jquery.js"></script>
+
+
+<script th:src="@{/bootstrap/js/jquery-3.3.1.min.js}"></script>
 <script>
     function getFormData(id) {
         var formData = {};
@@ -71,5 +103,4 @@
     })
 </script>
 </body>
-<div th:include="footer :: common"></div>
 </html>
