--- a/flow-main/src/main/resources/templates/main.html
+++ b/flow-main/src/main/resources/templates/main.html
@@ -464,6 +464,7 @@ desired effect
 <script th:src="@{/bootstrap-table/js/jquery.dataTables.min.js}"></script>
 <!-- AdminLTE App -->
 <script th:src="@{/bootstrap/js/adminlte.js}"></script>
+<script th:src="@{/util.js}"></script>
 <script th:src="@{/page/main.js}"></script>
 <script th:src="@{/plugin/jquery-confirm.min.js}"></script>
 <script>
